--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@ input[type="checkbox"]:not(:checked) {
             padding: 10px 20px;
             border-radius: 5px;
             border: none;
-            background-color: #3df1fb;
+            background-color: #49ccd3;
             color: white;
             cursor: pointer;
             transition: background-color 0.3s ease;
