--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
   -webkit-appearance: none;
   background-color: #26265E;
   outline: none;
-  border: 2px solid #3df1fb;
+  border: 2px solid #7700ff;
   border-radius: 8px;
   cursor: pointer;
 }
@@ -63,7 +63,7 @@ input[type="checkbox"]:checked::before {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #3df1fb;
+  color: #7700ff;
 
 }
 
